# Test_GitHub_Extension_for_VS

./: CMakeLists.txt  README.md
CMakeLinuxProject/: CMakeLinuxProject.vcxproj  main.cpp
CMakeProjectVS2/: CMakeLists.txt  CMakeProjectVS2.cpp  CMakeProjectVS2.h
One more project/: One more project.cpp  One more project.vcxproj  One more project.vcxproj.filters
Work with a pull request/: Work with a pull request.cpp  Work with a pull request.vcxproj  Work with a pull request.vcxproj.filters
hello/: hello.sln
hello/hello/: hello.cpp  hello.vcxproj  hello.vcxproj.filters  mod2.cpp  Звіт з ЛР.docx
