# CMakeList.txt : CMake project for CMakeProjectVS2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeProjectVS2 "CMakeProjectVS2.cpp" "CMakeProjectVS2.h")

# TODO: Add tests and install targets if needed.
